objects/Document_Tracking_SFDC2__c.object
<CustomObject>
    <description>Checklist for for tracking the deal flow and the delivery of documents necessary for boarding and funding loans.</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links Document Tracking record to Case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Documents Tracking</relationshipLabel>
        <relationshipName>Documents_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_Category__c</fullName>
        <description>Commercial Real Estate Comprehensive Checklist</description>
        <label>Document Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved CAM, LOI</fullName>
                </value>
                <value>
                    <fullName>Loan and Entity Documents</fullName>
                </value>
                <value>
                    <fullName>Appraisal, Environmental Reports</fullName>
                </value>
                <value>
                    <fullName>Borrower-Guarantor Financial Statements, Background</fullName>
                </value>
                <value>
                    <fullName>Property Information</fullName>
                </value>
                <value>
                    <fullName>Other Final Origination Document Forms</fullName>
                </value>
                <value>
                    <fullName>Conversation Logs</fullName>
                </value>
                <value>
                    <fullName>Construction Loan Documents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Other_SFDC2__c</fullName>
        <label>Document Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <description>Approved CAM, LOI</description>
        <label>Document</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Document_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved LOI (Signed)</fullName>
                </value>
                <value>
                    <fullName>Approved CAM (Signed)</fullName>
                </value>
                <value>
                    <fullName>Approved Closing Memo, if applicable (Signed)</fullName>
                </value>
                <value>
                    <fullName>LLC-1/Articles of Organization</fullName>
                </value>
                <value>
                    <fullName>By-laws</fullName>
                </value>
                <value>
                    <fullName>Articles of Amendment</fullName>
                </value>
                <value>
                    <fullName>Operating Agreement</fullName>
                </value>
                <value>
                    <fullName>Tax ID/EIN Number/SS-4</fullName>
                </value>
                <value>
                    <fullName>Letter of Good Standing</fullName>
                </value>
                <value>
                    <fullName>LLC Resolution</fullName>
                </value>
                <value>
                    <fullName>Entity Borrowing Authorization</fullName>
                </value>
                <value>
                    <fullName>Printouts of Google search on Entity</fullName>
                </value>
                <value>
                    <fullName>Certificate of Incorporation</fullName>
                </value>
                <value>
                    <fullName>Articles of Incorporation and By-laws</fullName>
                </value>
                <value>
                    <fullName>Vesting Tree</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership Agreement</fullName>
                </value>
                <value>
                    <fullName>LP-1</fullName>
                </value>
                <value>
                    <fullName>LP-5 Foreign Partnership (if necessary)</fullName>
                </value>
                <value>
                    <fullName>Final Loan Documents (Signed)</fullName>
                </value>
                <value>
                    <fullName>Recorded DOT</fullName>
                </value>
                <value>
                    <fullName>Credit Report</fullName>
                </value>
                <value>
                    <fullName>OFAC Report</fullName>
                </value>
                <value>
                    <fullName>BSA Report (if necessary)</fullName>
                </value>
                <value>
                    <fullName>Memo on Current, Pending, and/or Anticipated Litigation</fullName>
                </value>
                <value>
                    <fullName>Printouts of Google search on Guarantor</fullName>
                </value>
                <value>
                    <fullName>Operating Statements</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet and P&amp;L</fullName>
                </value>
                <value>
                    <fullName>K-1 Distribution</fullName>
                </value>
                <value>
                    <fullName>W-9</fullName>
                </value>
                <value>
                    <fullName>Personal Financial Statement and Credit Release Authorization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links Document Tracking record to Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Documents Tracking</relationshipLabel>
        <relationshipName>Documents_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 - Received</fullName>
                </value>
                <value>
                    <fullName>1 - Under Review</fullName>
                </value>
                <value>
                    <fullName>2 - Reviewed</fullName>
                </value>
                <value>
                    <fullName>3 - Approved</fullName>
                </value>
                <value>
                    <fullName>4 - N/A</fullName>
                </value>
                <value>
                    <fullName>0 - None</fullName>
                    <isActive>false</isActive>
                    <label>0 - None</label>
                </value>
                <value>
                    <fullName>1 - Received</fullName>
                    <isActive>false</isActive>
                    <label>1 - Received</label>
                </value>
                <value>
                    <fullName>2 - Under Review</fullName>
                    <isActive>false</isActive>
                    <label>2 - Under Review</label>
                </value>
                <value>
                    <fullName>3 - Reviewed</fullName>
                    <isActive>false</isActive>
                    <label>3 - Reviewed</label>
                </value>
                <value>
                    <fullName>4 - Approved</fullName>
                    <isActive>false</isActive>
                    <label>4 - Approved</label>
                </value>
                <value>
                    <fullName>5 - N/A</fullName>
                    <isActive>false</isActive>
                    <label>5 - N/A</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <isActive>false</isActive>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Received</fullName>
                    <isActive>false</isActive>
                    <label>Received</label>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                    <isActive>false</isActive>
                    <label>Reviewed</label>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                    <isActive>false</isActive>
                    <label>Under Review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Documents_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Document Tracking</label>
    <nameField>
        <label>Document Checklist</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Document_Other_SFDC2</fullName>
        <active>true</active>
        <description>When the Document is set to &quot;None,&quot; the Document Other field must be populated.</description>
        <errorConditionFormula>AND(ISPICKVAL( Document__c , &quot;Other&quot;),
ISBLANK( Document_Other_SFDC2__c ))</errorConditionFormula>
        <errorDisplayField>Document_Other_SFDC2__c</errorDisplayField>
        <errorMessage>Please enter a value in the Document Other field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rollback_Stages</fullName>
        <active>true</active>
        <description>Non-Managers (C&amp;I - LF &amp; CRESL Role) cannot move Document Statuses backwards</description>
        <errorConditionFormula>OR(
    AND(  
         $UserRole.DeveloperName = &quot;C_I_LF_CRESL&quot;,
         ISCHANGED(Status__c), 
          
         VALUE(LEFT(TEXT(PRIORVALUE(Status__c)),1)) &gt; 
         VALUE(LEFT(TEXT(Status__c),1)) 
       ),
    AND(
             PRIORVALUE(Status__c) &lt;&gt; null,
             ISBLANK(TEXT(Status__c))   
     )

)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Non-Managers cannot move Document Statuses backwards</errorMessage>
    </validationRules>
</CustomObject>